--- a/Layouts/Site.Master
+++ b/Layouts/Site.Master
@@ -32,8 +32,9 @@
 
 </head>
 <body>
+
     <form id="form1" runat="server">
-            
+        
         <asp:ContentPlaceHolder ID="main" runat="server"></asp:ContentPlaceHolder>
             
     </form>
@@ -42,11 +43,7 @@
         window.addEventListener('load', function () {
             new FastClick(document.body);
         }, false);
-
-        // add quick fade-in effect to the page
-        $(document).ready(function () {
-            $("body").rockFadeIn();
-        });
     </script>
+    <script src="<%# ResolveRockUrl("~~/Scripts/hallmarkcheckin.js" ) %>" ></script>
 </body>
 </html>
