--- a/Layouts/Site.Master
+++ b/Layouts/Site.Master
@@ -43,7 +43,11 @@
         window.addEventListener('load', function () {
             new FastClick(document.body);
         }, false);
+
+        // add quick fade-in effect to the page
+        $(document).ready(function () {
+            $("body").rockFadeIn();
+        });
     </script>
-    <script src="<%# ResolveRockUrl("~~/Scripts/hallmarkcheckin.js" ) %>" ></script>
 </body>
 </html>
